[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["dolggul2 <dolggul2@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
tensorflow = "^2.17.0"
torch = "^2.4.1"
torchinfo = "^1.8.0"
torchvision = "^0.19.1"
tqdm = "^4.66.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
